--- a/src/app/components/accueil/accueil.component.scss
+++ b/src/app/components/accueil/accueil.component.scss
@@ -3,3 +3,12 @@
   padding: 0;
 };
 
+.own-title{
+  //font-family: 'Monoton', cursive;
+  font-family: 'Trade Winds', cursive;
+  font-weight: 600
+}
+
+.own-text{
+  font-family: 'Open Sans', sans-serif;
+}
