--- a/src/app/components/app/app.component.scss
+++ b/src/app/components/app/app.component.scss
@@ -9,7 +9,7 @@
 
   @media all and (min-width: 992px) {
     .navbar .nav-item .dropdown-menu{ display: none; }
-    .navbar .nav-item:hover .nav-link{   }
+    //.navbar .nav-item:hover .nav-link{   }
     .navbar .nav-item:hover .dropdown-menu{ display: block; }
     .navbar .nav-item .dropdown-menu{ margin-top:0; }
     .dropdown-menu> li> a:hover{
@@ -17,4 +17,13 @@
     }
   }
 
+  .own-title{
+    //font-family: 'Monoton', cursive;
+    font-family: 'Trade Winds', cursive;
+    font-weight: 600
+}
+
+.own-text{
+    font-family: 'Open Sans', sans-serif;
+}
   
