--- a/src/app/modules/formation/components/list-by-stheme/list-by-stheme.component.html
+++ b/src/app/modules/formation/components/list-by-stheme/list-by-stheme.component.html
@@ -31,7 +31,7 @@
                                         <td  class="align-middle">{{ f.nom }}</td>
                                         <td  class="align-middle">{{ f.description }}</td>
                                         <td  class="align-middle text-center"><span class="badge bg-primary rounded-pill h6 pe-3 ps-3 fs-5 pt-0 pb-2">{{ f.nbreJrs| number }}</span></td>
-                                        <td class="align-middle"><button class="btn btn-success btn-sm ms-5" [routerLink]="'/formation/details/'+f.idFormation">S'inscrire</button></td>
+                                        <td class="align-middle"><button class="btn btn-success btn-sm ms-5" [routerLink]="'/session/lister/formation/'+f.idFormation">Sessions</button></td>
                                     </tr>
                                 </tbody>
                             </table>
