--- a/src/app/modules/formation/components/list-by-theme/list-by-theme.component.scss
+++ b/src/app/modules/formation/components/list-by-theme/list-by-theme.component.scss
@@ -19,3 +19,13 @@
     width: 10%;
     text-align: center;
 }
+
+.own-text{
+    font-family: 'Open Sans', sans-serif;
+}
+
+.own-title{
+    //font-family: 'Monoton', cursive;
+    font-family: 'Trade Winds', cursive;
+    font-weight: 600
+}
