--- a/src/app/modules/session/components/gestion-session/gestion-session.component.html
+++ b/src/app/modules/session/components/gestion-session/gestion-session.component.html
@@ -1,13 +1,6 @@
 <div class="container-fluid full">
     <div class="row d-flex justify-content-center   align-items-center">
-
-        <!--<mat-tab-group>
-            <mat-tab label="First"> Content 1 </mat-tab>
-            <mat-tab label="Second"> Content 2 </mat-tab>
-            <mat-tab label="Third"> Content 3 </mat-tab>
-          </mat-tab-group>-->
-
-        <div class="text-center mt-3">
+        <div class="text-center  mt-5  mb-4 ">
             <span class="text-uppercase fst-italic text-wrap fs-4 own-title">
                 Gestion des sessions
             </span>
