--- a/src/app/components/connexion/connexion.component.html
+++ b/src/app/components/connexion/connexion.component.html
@@ -30,12 +30,12 @@
             <button
             type="button"
             (click)="seConnecter()"
-            class="btn btn-primary col-lg-3">
+            class="btn btn-primary fst-italic col-lg-4">
             connexion
             </button>
             <button
             type="button"
-            class="btn btn-secondary col-lg-3 ms-3">
+            class="btn btn-secondary fst-italic col-lg-4 ms-3">
             inscription
             </button>
           </div>
