--- a/src/app/modules/dashboard/components/dashboard-logistique/dashboard-logistique.component.html
+++ b/src/app/modules/dashboard/components/dashboard-logistique/dashboard-logistique.component.html
@@ -1,15 +1,21 @@
 <div class="container-fluid full">
-    <p>date du jour : {{currentDate | date:'dd-MM-yyyy'}}</p>
-    
-    <p>choississez une formation</p>
+    <div class="container">
+        <p class="fst-italic fs-5"><strong>date du jour : {{currentDate | date:'dd-MM-yyyy'}}</strong></p>
+        <p class="mt-5 fst-italic fs-5"><strong><font size="6" >choississez une formation</font> </strong></p>
     <form (ngSubmit)="onSubmitFormFormation()">
-        <select name="formation" [(ngModel)]="formation" class="form-control" aria-label="Default select example">
-            <option *ngFor="let formation of formations" [ngValue]="formation">{{formation.nom}}</option>
-        </select> 
-        <button type="submit" class="btn btn-primary">
-            afficher sessions
-        </button>    
+        <div class="col-lg-6">
+            <select class="col-lg-3" name="formation" class="form-control" [(ngModel)]="formation" aria-label="Default select example">
+                <option *ngFor="let formation of formations" [ngValue]="formation">{{formation.nom}}</option>
+            </select>
+        </div> 
+        <div class="col-lg-4">
+            <button type="submit" class="btn btn-primary">
+                afficher ses sessions
+            </button>
+        </div>    
     </form>
-    <app-dashboard-logistique-session [sessions]="sessions"> </app-dashboard-logistique-session>  
-    <hr>  
+    <hr> 
+    <app-dashboard-logistique-session [sessions]="sessions"> </app-dashboard-logistique-session>    
+    </div>
+    
 </div>
