--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -1,17 +1,17 @@
-<div class="container-fluid full d-flex justify-content-center align-items-center">
-  <div class="container-fluid w-100">
+<div class="container-fluid  d-flex justify-content-center align-items-center">
+  <div class="container w-100">
       <div class="mt-3 w-100">
         <div class="w-100">
           <div class="row w-100 g-5">
             <div class="col-md-12 w-100 ">
-              <div class="row text-center own-title fs-1 mb-4 g-5">
-                <span>BIENVENUE SUR ... IT TRAINING</span>
+              <div class="row text-center own-title fs-1 mb-5 g-5 mt-4">
+                <span class="own-title ">BIENVENUE SUR ... IT TRAINING</span>
               </div>
               <div class="text-center w-100 mt-5">
                 <p class="text-uppercase own-title fs-3">
                   Meilleur centre de formation de France.
                 </p>
-                <h2 class="text-uppercase mt-2 mb-5 own-title fs-5">
+                <h2 class="text-uppercase mt-2 mb-5 own-title fs-6">
                   Ayez une longeur d'avance sur les autres avec des formations de qualité et ultra personnalisées
                 </h2>
                 <div class="row g-3 d-flex justify-content-center mb-5">
@@ -19,7 +19,7 @@
                     <ngb-carousel #carousel [interval]="5000" [pauseOnHover]="true" [pauseOnFocus]="false" (slide)="onSlide($event)" >
                         <ng-template ngbSlide *ngFor="let img of images; index as i">
                         <div class="carousel-caption d-none d-md-block mb-5 own-title">
-                          <h1>{{(i+1==1)? "Formations ultra personnalisées":"Des formations en Distanciel / Présentiel / Mixtes "}}</h1>
+                          <h1 class="own-title fs-1" [class]="(i+1==1)? 'text-white':'text-dark'">{{(i+1==1)? "Formations ultra personnalisées":"Des formations en Distanciel / Présentiel / Mixtes "}}</h1>
                         </div>
                         <a href="#" target="_blank" rel="nofollow noopener noreferrer">
                             <div class="picsum-img-wrapper ">
