--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,9 @@
 .invalid-feedback {
     display: block;
 }
+*{
+    font-family: 'Joan', serif;
+}
 
 body{
     //font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
