add module inscription and MVP functionnalities for this module

--- a/src/app/modules/inscription/components/create-inscription/create-inscription.component.html
+++ b/src/app/modules/inscription/components/create-inscription/create-inscription.component.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="row d-flex justify-content-end mt-4">
                     <div class="col-md-2">
-                        <button class="fst-italic badge btn-success text-wrap p-2 fs-6 mt-3 mb-3" >&#9733; <b>S'inscrire</b></button>
+                        <button class="fst-italic badge btn-success text-wrap p-2 fs-6 mt-3 mb-3" (click)="addInscription()" >&#9733; <b>S'inscrire</b></button>
                     </div>
                 </div>
             </div>
