--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -58,7 +58,7 @@
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark fs-6">
                   <li><a class="dropdown-item " [routerLink]="''">Mon panier</a></li>
-                  <li><a class="dropdown-item" [routerLink]="''">Mes inscriptions</a></li>
+                  <li><a class="dropdown-item" [routerLink]="'/inscription/lister/dashboard'">Mes inscriptions</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
