mise à jour du module dashboard

--- a/src/app/components/connexion/connexion.component.html
+++ b/src/app/components/connexion/connexion.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid full">
     <div class="row justify-content-md-center">
-      <div class="col-sm-2 mt-5">
+      <div class="col-md-3 mt-5">
       <div class="alert alert-danger" *ngIf="erreur == 1">
         <strong>login ou mot de passe erronés..</strong>
       </div>
@@ -36,7 +36,7 @@
             <button
             type="button"
             class="btn btn-secondary fst-italic col-lg-4 ms-3">
-            inscription
+            créer un compte
             </button>
           </div>
         </form>
