--- a/src/app/modules/dashboard/components/dashboard-formation-session/dashboard-formation-session.component.html
+++ b/src/app/modules/dashboard/components/dashboard-formation-session/dashboard-formation-session.component.html
@@ -4,9 +4,11 @@
             <option *ngFor="let session of sessions" [ngValue]="session">{{session.nom}} - date de fin {{session.dateFin}}</option>
         </select>
     </form> 
-    <div *ngIf="session" >
+    <div class= "mt-4" *ngIf="session" >
         <p>Absents sur formations :</p>
-        <p>Date de fin de formation : </p>
         <p>Evaluations des stagiaires : </p>
     </div>  
+</div> 
+<div *ngIf="sessions==null" >
+    <p class="mt-5 fst-italic fs-5"><strong>Pas de tableau de bord à proposer</strong></p> 
 </div> 
