--- a/src/app/modules/dashboard/components/dashboard-logistique-session/dashboard-logistique-session.component.html
+++ b/src/app/modules/dashboard/components/dashboard-logistique-session/dashboard-logistique-session.component.html
@@ -4,10 +4,11 @@
             <option *ngFor="let session of sessions" [ngValue]="session">{{session.nom}} - date de fin {{session.dateFin}}</option>
         </select>
     </form>
-    <div *ngIf="session" >
-        <p>formateur : </p>
-        <p>salles : </p>
-        <!--<select  class="form-select" aria-label="Default select example">
+    <div class="mt-4" *ngIf="session" >
+        <p *ngIf="session.formateur">formateur : {{session.formateur.nom}}</p>
+        <p *ngIf="session.formateur==null">formateur : aucun</p>
+        <!--<p>salles : </p>
+        <select  class="form-select" aria-label="Default select example">
             <option *ngFor="let session of sessions" [value]="session.idSession">{{session.nom}} - date de fin {{session.dateFin}}</option>
         </select>--> 
     </div>      
